--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Favicon estándar para navegadores -->
+    <link rel="icon" href="icon.png" type="images/png">
     <title>TaskNova - Gestor de Tareas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
