--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon estándar para navegadores -->
-    <link rel="icon" href="images/icon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <title>TaskNova - Gestor de Tareas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
